# Art-Gallery

./: CMakeLists.txt  README.md
input/: sample-data-10.txt  sample-data-1000.txt  sample-data-10000.txt  sample-data-100000.txt  sample-data-20.txt  sample-data-40.txt  sample-data-5.txt
output/: output.txt
src/: algos.cpp  algos.h  main.cpp  manager.cpp  manager.h  painting.cpp  painting.h
